force-app/main/default/objects/candidate__c/candidate__c.object-meta.xml
<CustomObject>
    <description>applicant who might apply for more then 1 position</description>
    <label>candidate</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>candidate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>candidates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>