force-app/main/default/objects/candidate__c/fields/current_employer__c.field-meta.xml
<CustomField>
    <fullName>current_employer__c</fullName>
    <label>current employer</label>
    <length>18</length>
    <type>Text</type>
</CustomField>