force-app/main/default/objects/candidate__c/fields/education__c.field-meta.xml
<CustomField>
    <fullName>education__c</fullName>
    <label>education</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>Ph.D</fullName>
            </value>
            <value>
                <fullName>HS Diploma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>