force-app/main/default/objects/candidate__c/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <externalId>true</externalId>
    <label>email</label>
    <type>Email</type>
</CustomField>