force-app/main/default/objects/candidate__c/fields/last_name__c.field-meta.xml
<CustomField>
    <fullName>last_name__c</fullName>
    <externalId>true</externalId>
    <label>last name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>