force-app/main/default/objects/candidate__c/fields/ssn__c.field-meta.xml
<CustomField>
    <fullName>ssn__c</fullName>
    <label>ssn</label>
    <length>9</length>
    <type>Text</type>
</CustomField>