force-app/main/default/objects/candidate__c/fields/US_citizen__c.field-meta.xml
<CustomField>
    <fullName>US_citizen__c</fullName>
    <defaultValue>true</defaultValue>
    <label>US citizen</label>
    <type>Checkbox</type>
</CustomField>