force-app/main/default/objects/candidate__c/fields/visa_req__c.field-meta.xml
<CustomField>
    <fullName>visa_req__c</fullName>
    <defaultValue>true</defaultValue>
    <label>visa req</label>
    <type>Checkbox</type>
</CustomField>