force-app/main/default/objects/candidate__c/fields/year_of_exp__c.field-meta.xml
<CustomField>
    <fullName>year_of_exp__c</fullName>
    <label>year of exp</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>